--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,7 +1,7 @@
 .popup__heading{
     padding: 0;
     margin: 0px auto 54px ;
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
