correct after 1st revue

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -5,6 +5,9 @@
     padding: 0;
     align-self: center;
     justify-self: center;
+    border: none;
+    background: none;
+    background-image: url(../../../images/like-icon.svg);
 }
 
 .element__like:hover{
