--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -2,5 +2,6 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    border-radius: 10px 10px 0 0;    
+    border-radius: 10px 10px 0 0;
+    object-fit: cover;
 }
