--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 50px;
     background: #000000;
+    border: none;
     border-radius: 2px;
     font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
@@ -21,5 +22,7 @@
 @media (max-width: 767px) {
     .popup__button{
         height: 46px;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
