--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,8 +1,8 @@
 .popup__container{
     padding: 34px 36px 37px;
     margin: auto;
-    width: 358px;
-    height: 259px;
+    width: 100%;
+    max-width: 358px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -12,8 +12,6 @@
 @media (max-width: 767px) {
     .popup__container{
         padding: 25px 22px;
-        margin: auto;
-        width: 238px;
-        height: 272px;
+        max-width: 238px;
     }
 }
