--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,12 @@
-.popup{
-    /* display: none; */
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.popup{    
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* width: 100%;
+    height: 100%; */
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
+    display: none;
 }
