--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,9 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    /* width: 100%;
-    height: 100%; */
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    display: none;
+    /* display: none; */
 }
