corrected after 2 revue

--- a/blocks/button/_theme/button_theme_close.css
+++ b/blocks/button/_theme/button_theme_close.css
@@ -1,7 +1,5 @@
-.button_theme_close{
-    background: none;
-    border: none;
-    background-image: url(../../../../images/close-icon.svg);
+.button_theme_close{    
+    background-image: url(../../../images/close-icon.svg);
     background-size: 32px 32px;
     position: absolute;
     top: -40px;
