--- a/pages/index.css
+++ b/pages/index.css
@@ -3,8 +3,9 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__edit/popup__edit.css);
-@import url(../blocks/button/_theme/_close/button_theme_close.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/button/_theme/button_theme_close.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__button/popup__button.css);
@@ -15,9 +16,9 @@
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
-@import url(../blocks/button/_theme/_edit/button_theme_edit.css);
+@import url(../blocks/button/_theme/button_theme_edit.css);
 @import url(../blocks/profile/__proffession/profile__proffession.css);
-@import url(../blocks/button/_theme/_add/button_theme_add.css);
+@import url(../blocks/button/_theme/button_theme_add.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__image/element__image.css);
