--- a/blocks/button/_theme/button_theme_add.css
+++ b/blocks/button/_theme/button_theme_add.css
@@ -1,17 +1,11 @@
 .button_theme_add{
     min-width: 150px;
-    height: 50px;
-    border: none;
-    background: none;
-    background-image: url(../../../../images/add-icon.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+    height: 50px;    
+    background-image: url(../../../images/add-icon.svg);
     background-size: 22px 22px;
     border: 2px solid #FFFFFF;
     border-radius: 2px;    
-    align-self: center;
-    padding: 0;
-    margin: 0;
+    align-self: center;    
     margin-left: auto;
 }
 
