--- a/blocks/button/_theme/button_theme_edit.css
+++ b/blocks/button/_theme/button_theme_edit.css
@@ -1,14 +1,9 @@
 .button_theme_edit{
-    border: none;
-    background: none;
-    background-image: url(../../../../images/edit-icon.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url(../../../images/edit-icon.svg);
     background-size: 10px 10px;
     width: 24px;
     height: 24px;
     border: 1px solid #FFFFFF;
-    padding: 0;
     margin: auto;    
 }
 
