--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,3 +1,9 @@
 .button{
-    
+    background: none;
+    border: none;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 0;
+    margin: 0;
 }
