--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -8,6 +8,7 @@
     border: none;
     background: none;
     background-image: url(../../../images/like-icon.svg);
+    cursor: pointer;
 }
 
 .element__like:hover{
