--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -8,6 +8,12 @@
     gap: 20px 17px;    
 }
 
+@media (max-width: 1200px) {
+    .elements{
+        grid-template-columns: repeat(2, 1fr);           
+    }
+}
+
 @media (max-width: 767px) {
     .elements{
         width: 88.125%;
