--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,7 +4,8 @@
     width: 100%;
     max-width: 282px;
     background: #FFFFFF;
-    border-radius: 10px;    
+    border-radius: 10px;
+    position: relative;   
 }
 
 @media (max-width: 767px) {
