--- a/blocks/popup/_unvisible/popup_unvisible.css
+++ b/blocks/popup/_unvisible/popup_unvisible.css
@@ -1,3 +1,5 @@
 .popup_unvisible{    
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.5s, opacity 0.5s ease-in-out;
 }
