--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,5 +6,7 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    /* display: none; */
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0.5s, opacity 0.5s ease-in-out;
 }
