--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,6 +3,7 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_unvisible/popup_unvisible.css);
+@import url(../blocks/popup/__opened/popup__opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/__form-change-name/popup__form-change-name.css);
@@ -10,7 +11,11 @@
 @import url(../blocks/button/_theme/button_theme_close.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__item/popup__item.css);
+@import url(../blocks/popup/__item/_type_error/popup__item_type_error.css);
+@import url(../blocks/popup/__input-errors/popup__input-errors.css);
+@import url(../blocks/popup/__input-errors/_active/popup__input-errors_active.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button/popup__button_novalid.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__name-image/popup__name-image.css);
 @import url(../blocks/header/header.css);
