--- a/src/blocks/popup/__item/popup__item.css
+++ b/src/blocks/popup/__item/popup__item.css
@@ -1,6 +1,6 @@
 .popup__item{
     height: 30px;
-    padding: 0;  
+    padding: 5px 0 13px;  
     border: 0;
     width: 100%;    
     box-sizing: border-box;
@@ -39,8 +39,5 @@
 @media (max-width: 767px) {
     .popup__item{
         height: 27px;
-    }
-    .popup__item:last-of-type{
-        margin-bottom: 45px;
     }
 }
