--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -1,14 +1,13 @@
 .element__like{
     width: 22px;
     height: 19px;
-    margin: 0;
-    padding: 0;
-    align-self: center;
-    justify-self: center;
+    background: center no-repeat url(../../../images/like-icon.svg);
+    background-color: transparent;
+    background-size: 22px 19px;
+    transition: opacity .5s ease;
     border: none;
-    background: none;
-    background-image: url(../../../images/like-icon.svg);
-    cursor: pointer;
+    align-self: center;
+    margin-right: 20px;    
 }
 
 .element__like:hover{
