--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -12,7 +12,8 @@
     padding: 0;
     margin: 0;
     background-image: url(../../../images/delet-icon.svg);
-    background-size: 18px 20px;  
+    background-size: 18px 20px;
+    display: none;  
 }
 
 .element__delete:hover{
